# dl-lab

./: cliff.toml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
docs/: README.md
src/dl_lab/: functors.py  metrics.py  types.py
src/dl_lab/schemes/: __init__.py  abc.py  callbacks.py  schemes.py
src/dl_lab/utils/: __init__.py  py_utils.py  torch_utils.py
tests/: test_utils.py
