[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",  # Hatch still includes `docs/README.md` if `project.readme` is set.
    "/tests",
    ".gitignore",
    ".readthedocs.yaml",
    "CHANGELOG.md",
    "cliff.toml",
    "mkdocs.yml",
]


[project]
name = "dl-lab"
version = "0.1.0"
description = "PyTorch-centric self-educational implementations of deep learning schems, models, and utilities"
authors = [
    {name = "dd-n-kk", email = "djlstvn.cs03@gmail.com"}
]
readme = "docs/README.md"
keywords = [
    "deep learning", "machine learning", "neural network", "data", "AI", "PyTorch", "torch"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 3 - Alpha",
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "tqdm",
]


[dependency-groups]
dev = [
    "ipykernel",
    "ipywidgets",
    "mkdocs-material",
    "mkdocstrings-python",
    "pytest-cov",
    "pytest",
]


[project.optional-dependencies]
cpu = [
    "torch",
]
gpu = [
    "torch",
]


[tool.uv]
conflicts = [
    [{ extra = "cpu" }, { extra = "gpu" }],
]


[tool.uv.sources]
torch = [
    {index = "torch-cpu", extra = "cpu"},
    {index = "torch-gpu", extra = "gpu"},
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[project.urls]
Homepage = "https://github.com/dd-n-kk/dl-lab"
Documentation = "https://dl-lab.readthedocs.io"
Issues = "https://github.com/dd-n-kk/dl-lab/issues"
